<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:animationCache="false"
    android:clipToPadding="false"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow
        android:layoutAnimation="@anim/layout_animation_row_right_slide">
        <TextView
            android:gravity="right"
            android:text="@string/layout_animation_name" />
        <EditText />
    </TableRow>

    <TableRow
        android:layoutAnimation="@anim/layout_animation_row_left_slide">
        <TextView
            android:gravity="right"
            android:text="@string/layout_animation_lastname" />
        <EditText />
    </TableRow>

    <TableRow
        android:layoutAnimation="@anim/layout_animation_row_right_slide">
        <TextView
            android:gravity="right"
            android:text="@string/layout_animation_phone" />
        <EditText />
    </TableRow>

    <TableRow
        android:id="@+id/line5">
        <TextView
            android:gravity="right"
            android:text="@string/layout_animation_address" />
        <EditText android:lines="3" />
    </TableRow>
</TableLayout>
